<resources>
    <string name="app_name">Happy places</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="save">Save</string>
    <string name="no_happy_places_found_yet_kindly_add_one">No Happy places found yet. Kindly add one.</string>
    <string name="apiPlacesKey">AIzaSyCPSSzsplxk8ToNb3s9JUxnqKQ-mMQEtUQ</string>
    <string name="view_on_map">view on Map</string>
    <string name="select_current_location">SELECT CURRENT LOCATION</string>
</resources>