<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.AddHappyPlaceActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addHappyPlaceToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/customToolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/svMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addHappyPlaceToolBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilTitle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:hintTextColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toTopOf="@id/ilDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ieTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilDescription"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/description"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:hintTextColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toTopOf="@id/ilDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ilTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ieDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilDate"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/date"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:hintTextColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toTopOf="@id/ilLocation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ilDescription">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ieDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilLocation"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/location"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:hintTextColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ilDate">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ieLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnCurrentLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_marginTop="5dp"
                android:text="@string/select_current_location"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/lightGray"
                app:layout_constraintTop_toBottomOf="@id/ilLocation"
                app:layout_constraintEnd_toEndOf="parent"/>

            <LinearLayout
                android:id="@+id/lnrImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnCurrentLocation">

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="180dp"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:elevation="1dp"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:id="@+id/ivPhoto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ic_image"
                        android:backgroundTint="@color/lightGray"
                        android:scaleType="fitXY" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvAddImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/add_image"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lnrImage"
                app:layout_constraintVertical_bias="0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>